# Personal_AI_Infrastructure

./: .gitignore
Auto Run Docs/Initiation/: Phase-01-Codebase-Exploration-And-Orientation.md
Auto Run Docs/Initiation/Working/: exploration-report.md  packs-overview.md
Packs/pai-hook-system/src/hooks/: AskUserQuestionVoice.hook.ts  StartupGreeting.hook.ts
Packs/pai-hook-system/src/hooks/handlers/: SystemIntegrity.ts  voice.ts
Packs/pai-hook-system/src/hooks/lib/: identity.ts
Packs/pai-voice-system/: INSTALL.md  README.md  VERIFY.md
Packs/pai-voice-system/src/VoiceServer/: restart.sh  server.ts  start.sh  stop.sh
Packs/pai-voice-system/src/VoiceServer/elevenlabs/: elevenlabs-tts.ts
Packs/pai-voice-system/src/VoiceServer/linux-service/: engine-selection.ts  install.sh  linux-audio.ts  pai-voice-server.service  piper-tts.ts  qwen3-tts.ts  start.sh  status.sh  stop.sh  uninstall.sh
Packs/pai-voice-system/src/VoiceServer/macos-service/: install.sh  server-legacy.js  start.sh  stop.sh
Packs/pai-voice-system/src/VoiceServer/qwen/: config.py  models.py  pyproject.toml  qwen3-server.py  tts_engine.py
